--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "mongodb": "^4.3.1"
   }
 }
